--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@ layout: page
 
 <p>
   Inside News About The Billion $$$
-  Matt &amp; John's®
-  Pixel Art Blockchain Token Con-Artist Fraud And Much More
+  Pixel Art Blockchain Token Con-Artist Fraud.
+  All About Matt &amp; John's® And Much More
 </p>
+
 
 
 {% assign last_week = '00' %}
