--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@ layout: page
 <p>
   Inside News About The Billion $$$
   Pixel Art Blockchain Token Con-Artist Fraud.
-  All About Matt &amp; John's® And Much More
+  All About Matt &amp; John's® Punks And Much More.
 </p>
+
+<h1>{{ site.title }}</h1>
+
 
 
 
@@ -32,12 +35,22 @@ layout: page
    <a href="{{ post.url | relative_url }}"><b>{{ post.title }}</b></a>
   </p>
 
-  <p>
-    <!-- add exceprt -->
-  </p>
+
+  <!-- excerpt -->
+  {{ post.excerpt }}
 
 </div>
 {% endfor %}
 
 
+
+
+
+<h2>
+  Questions? Comments?
+</h2>
+<p>
+  Post them on the
+  <a href="https://old.reddit.com/r/CryptoPunksDev">CryptoPunksDev reddit</a>. Thanks.
+</p>
 
