--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ layout: page
 
   <div>
     <p style="font-size: 80%; ">
-      {% assign day = page.date | date: "%-d"  %}
+      {% assign day = post.date | date: "%-d"  %}
       {{ post.date | date: '%A, %B' }}
       {% case day %}
         {% when '1' or '21' or '31' %}{{ day }}st,
@@ -43,7 +43,7 @@ layout: page
         {% when '3' or '23' %}{{ day }}rd,
         {% else %}{{ day }}th,
       {% endcase %}
-      {{ page.date | date: "%Y" }}
+      {{ post.date | date: "%Y" }}
     </p>
 
   <!-- excerpt -->
