--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: page
   {% assign last_week = week %}
 
 
-    <p style="font-size: 80%; ">
+    <p style="font-size: 80%; margin-bottom: 0;">
       {% assign day = post.date | date: "%-d"  %}
       {{ post.date | date: '%A, %B' }}
       {% case day %}
@@ -43,7 +43,7 @@ layout: page
       {{ post.date | date: "%Y" }}
     </p>
 
-    <h3 style="padding-top: 0; "><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h3>
+    <h3 style="padding-top: 0; margin-top: 0; "><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h3>
 
     <div>
       <!-- excerpt -->
