--- a/index.html
+++ b/index.html
@@ -69,6 +69,6 @@ layout: page
 </h2>
 <p>
   Post them on the
-  <a href="https://old.reddit.com/r/CryptoPunksDev">CryptoPunksDev reddit</a>. Thanks.
+  <a href="https://old.reddit.com/r/CryptoPunksDev"><b>CryptoPunksDev reddit</b></a>. Thanks.
 </p>
 
